[package]
name = "network-policy-verdict-logger-ebpf"
version = "0.1.0"
edition = "2018"

[dependencies]
aya-bpf = { git = "http://github.com/aya-rs/aya", branch = "main" }
network-policy-verdict-logger-common = { path = "../network-policy-verdict-logger-common" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya-log", branch = "main" }

[[bin]]
name = "network-policy-verdict-logger"
path = "src/main.rs"

[profile.dev]
panic = "abort"
debug = 1
opt-level = 2
overflow-checks = false

[profile.release]
panic = "abort"

[workspace]
members = []
